--- a/app/view/trios/home.twig
+++ b/app/view/trios/home.twig
@@ -5,8 +5,10 @@
 {% endblock %}
 
 {% block content %}
+
 <section class="ud-hero">
-    <div class="ud-hero-content" data-wow-delay=".2s">
+    <img class="ud-hero-image" src="assets/images/trios/cover.png" alt="Cover Image" height="750px" width="950px">
+    <div class="ud-hero-content">
         <h1 class="ud-hero-title">
             IF YOU THINK INTERNET CHANGED YOUR LIFE, THINK AGAIN.<br />
             (IOT)<br />
