--- a/assets/css/trios/custom.css
+++ b/assets/css/trios/custom.css
@@ -1,16 +1,4 @@
-/* =======
-
-	Template Name: Play Bootstrap
-	Author: UIdeck
-	Author URI: https://uideck.com/
-	Support: https://github.com/uideck/
-	Version: 1.0
-
-======== */
-/*===========================
-  COMMON css 
-===========================*/
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800;900&display=swap");
+/*==========COMMON css==========*/
 :root {
   --font: "Inter", sans-serif;
   --body-color: #637381;
