--- a/app/view/beginner/home.twig
+++ b/app/view/beginner/home.twig
@@ -6,7 +6,8 @@
 
 {% block content %}
 <section class="ud-hero">
-    <div class="ud-hero-content" data-wow-delay=".2s">
+    <img class="ud-hero-image" src="assets/images/beginner/cover.png" alt="Cover Image" height="750px" width="950px">
+    <div class="ud-hero-content">
         <h1 class="ud-hero-title">
             IF YOU THINK INTERNET CHANGED YOUR LIFE, THINK AGAIN.<br />
             (IOT)<br />
@@ -14,102 +15,136 @@
         </h1>
     </div>
 </section>
+
 <section id="features" class="ud-features">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
+                <div class="ud-blog-details-title">
+                    <h1>What is IoT?</h1>
+                </div>
+                <p class="ud-blog-details-para">
+                    IoT makes once "dumb" devices "smarter" by giving them the ability to send data over the internet,
+                    allowing the device to communicate with people and other IoT-enabled things.
+                </p>
+                <p class="ud-blog-details-para">
+                    The connected "smart home" is a good example of IoT in action. Internet-enabled thermostats,
+                    doorbells, smoke detectors and security alarms create a connected hub where data is shared between
+                    physical devices and users can remotely control the "things" in that hub (i.e., adjusting
+                    temperature settings, unlocking doors, etc.) via a mobile app or website.
+                </p>
+                <p class="ud-blog-details-para">
+                    Far from being restricted to just the home, the Internet of Things can be found in an array of
+                    devices, industries and settings. From smart blackboards in school classrooms to medical devices
+                    that can detect signs of Parkinson's disease, IoT is rapidly making the world smarter by connecting
+                    the physical and the digital.
+                </p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12">
                 <div class="ud-section-title">
-                    <h1>IOT Learning Board</h1>
+                    <h2>Features of Internet of Things (IoT)</h2>
                 </div>
-                <p class="ud-blog-details-para">
-                    Educators look for low-cost solutions that are easily available in the market, out of the box
-                    ready to use, modular, and self-explanatory. To start learning embedded systems, the first thing
-                    that is pretty basic and common is Arduino and Raspberry Pi. These two embedded boards are
-                    feature-rich, compact size with high computing power and are available with various versions and
-                    in various form factors.
-                </p>
-                <p class="ud-blog-details-para">
-                    But certainly, while learning, one also needs a lot of complementary hardware that is common in
-                    most prototype projects. For example, push-buttons, LEDs, relay, motors, display, sensors,
-                    buzzers, etc.
-                </p>
-                <p class="ud-blog-details-para">
-                    However, during the learning phase, you do not have enough exposure to decide what other
-                    components need to be purchased and what can be the most useful feature that we can have in our
-                    project. It’s only after learning about the sensor that we realize how useful it can be to us in
-                    a specific way.
-                </p>
-                <p class="ud-blog-details-para">
-                    If this initial phase has fewer options to explore, then learning becomes a tedious task and the
-                    enthusiasm that we start with goes to waste. Only theoretical knowledge or reading about sensors
-                    and boards cannot make a good impression as compared to getting hands-on experience while
-                    creating one.
-                </p>
-                <p class="ud-blog-details-para">
-                    This is where the Embedded Learner Board comes into the picture. This learning board is designed
-                    and developed by Trios team it is a new board, it justifies its name because the board is
-                    specifically designed to improve the learning experience of the students. The board can be
-                    easily connected with the help of jumper wire.
-                </p>
-
-                <h2 class="ud-blog-details-title">
-                    Single Board for entire Solutions of Student Projects
-                </h2>
-
-                <div class="ud-blog-details-image">
-                    <img src="assets/images/learning_board.png" loading="lazy" alt="Learning Board" height="500px"
-                        width="1110px" />
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xl-4 col-lg-6 col-sm-12">
+                <div class="ud-single-feature">
+                    <div class="ud-feature-icon">
+                        <i class="fab fa-connectdevelop"></i>
+                    </div>
+                    <div class="ud-feature-content">
+                        <h3 class="ud-feature-title">Connectivity</h3>
+                        <p class="ud-feature-desc">
+                            In the case of IoT, the most important feature one can consider is connectivity. Without
+                            seamless communication among the interrelated components of the IoT ecosystems (i.e.
+                            sensors, compute engines, data hubs, etc.) it is not possible to execute any proper business
+                            use case. IoT devices can be connected over Radio waves, Bluetooth, Wi-Fi, Li-Fi, etc. We
+                            can leverage various protocols of internet connectivity layers in order to maximize
+                            efficiency and establish generic connectivity across IoT ecosystems and Industry. There may
+                            be special cases where the IoT ecosystem is built on-premises or in an intranet.
+                        </p>
+                    </div>
                 </div>
-
-                <p class="ud-blog-details-para">
-                <h3 class="ud-blog-details-subtitle">Features</h3>
-                </p>
-
-                <p class="ud-blog-details-para">
-                    Embedded Learner Board has a lot of essential basic components designed on to the board, i.e.,
-                    16×2 alphanumeric display, Relay, Potentiometer, IOT module.
-                </p>
-                <p class="ud-blog-details-para">
-                    The board can be easily mounted on another board or project with the help of a mounting hole.
-                </p>
-                <p class="ud-blog-details-para">
-                    All Sensors are Plug_and_play.
-                </p>
-                <p class="ud-blog-details-para">
-                    Auto Programmable.
-                </p>
-                <p class="ud-blog-details-para">
-                    Turn on/off loads using relays (4 Relays).
-                </p>
-                <p class="ud-blog-details-para">
-                    Loads can be turned ON using webpage.
-                </p>
-                <p class="ud-blog-details-para">
-                    Smart WIFI configuration is available.
-                </p>
-                <p class="ud-blog-details-para">
-                    The firmware/code can be upgraded over the air.
-                </p>
-                <p class="ud-blog-details-para">
-                    There is a common power supply to all the elements if needed. The size of the board is quite
-                    compact even with so many components on the board.
-                </p>
-                <p class="ud-blog-details-para">
-                    Also, the hardware part is really affordable and low-cost compared to the market cost of
-                    individual components..
-                </p>
-                <p class="ud-blog-details-para">
-                    These sessions are quite informative. The concept of these sessions is to explore the
-                    possibilities that can be developed with the board. This learner board has a good potential to
-                    at least create a good competition in the market for such learner boards.
-                </p>
-                <p class="ud-blog-details-para">
-                    All in all, the Embedded Learner Board by trios is a revolutionary DIY embedded learning system
-                    that not only teaches you programming and coding but also gives a hands-on learning experience.
-                </p>
+            </div>
+            <div class="col-xl-4 col-lg-6 col-sm-12">
+                <div class="ud-single-feature">
+                    <div class="ud-feature-icon">
+                        <i class="far fa-eye"></i>
+                    </div>
+                    <div class="ud-feature-content">
+                        <h3 class="ud-feature-title">Sensing</h3>
+                        <p class="ud-feature-desc">
+                            We humans can naturally understand and analyze our circumstances easily based on our past
+                            experiences with various things or situations. In the case of IoT in order to get the best
+                            of it, we need to read the analog signal, convert it in such a way that we can derive
+                            meaningful insights out of it. We use Electrochemical, gyroscope, pressure, light sensors,
+                            GPS, Electrochemical, pressure, RFID, etc. to gather data based on a particular problem. For
+                            example for automotive use cases, we use Light detection sensors along with pressure,
+                            velocity and imagery sensors. To make a use case successful we need to choose the proper
+                            sensing paradigm.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-6 col-sm-12">
+                <div class="ud-single-feature">
+                    <div class="ud-feature-icon">
+                        <i class="fas fa-network-wired"></i>
+                    </div>
+                    <div class="ud-feature-content">
+                        <h3 class="ud-feature-title">Active Engagements</h3>
+                        <p class="ud-feature-desc">
+                            IoT device connects various products, cross-platform technologies and services work together
+                            by establishing an active engagement between them. In general, we use cloud computing in
+                            block chain to establish active engagements among IoT components. In the case of Industry
+                            grade, IoT solutions raw analog data need to be acquired, preprocessed and rescale as per
+                            business capacity. As per Google, only 50% of structured and 1% of unstructured data is used
+                            to make important business decisions. So while designing the IoT ecosystems carriers need to
+                            consider the future needs of manipulating such a huge scale of data to satisfy incremental
+                            business needs. One can confuse the need of active engagements with scale; practically it
+                            means your systems should be able to handle huge data across various technologies,
+                            platforms, products, and industries.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-6 col-sm-12">
+                <div class="ud-single-feature">
+                    <div class="ud-feature-icon">
+                        <i class="fab fa-cloudscale"></i>
+                    </div>
+                    <div class="ud-feature-content">
+                        <h3 class="ud-feature-title">Scale</h3>
+                        <p class="ud-feature-desc">
+                            IoT devices should be designed in such a way that they can be scaled up or down easily on
+                            demand. In general, IoT is being used from smart home automation to automating large
+                            factories and work stations, so the use cases vary in scale. A carrier should design their
+                            IoT infrastructure depending upon their current and future engagement scale.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-6 col-sm-12">
+                <div class="ud-single-feature">
+                    <div class="ud-feature-icon">
+                        <i class="far fa-snowflake"></i>
+                    </div>
+                    <div class="ud-feature-content">
+                        <h3 class="ud-feature-title">Dynamic Nature</h3>
+                        <p class="ud-feature-desc">
+                            For any IoT use case, the first and foremost step is to collecting and converting data in
+                            such a way that means business decisions can be made out of it. In this whole process,
+                            various components of IoT need to change their state dynamically. For example, the input of
+                            a temperature sensor will vary continuously based on weather conditions, locations, etc. IoT
+                            devices should be designed this keeping in mind.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </section>
-
 {% endblock %}
