--- a/assets/css/beginner/home.css
+++ b/assets/css/beginner/home.css
@@ -1,53 +1,55 @@
 /* ===== Hero CSS ===== */
 .ud-hero {
-  background-image: url("../../images/beginner/cover.png");
-  height: 750px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-top: 180px;
+  padding-top: 75px;
+  background: var(--primary-color);
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .ud-hero {
-    padding-top: 160px;
+    padding-top: 40px;
   }
 }
 
 @media (max-width: 767px) {
   .ud-hero {
-    padding-top: 130px;
+    padding-top: 40px;
   }
 }
 
+.ud-hero-image {
+  width: 100%;
+}
+
 .ud-hero-content {
-  max-width: 780px;
-  margin: auto;
-  margin-bottom: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .ud-hero-content .ud-hero-title {
   color: var(--white);
   font-weight: 700;
-  font-size: 26px;
+  font-size: 25px;
   line-height: 50px;
   text-align: center;
-  margin-top: 42%;
+  margin-top: 70%;
   margin-bottom: 30px;
   text-shadow: 2px 2px 4px #000000;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .ud-hero-content .ud-hero-title {
-    font-size: 38px;
+    font-size: 32px;
     line-height: 50px;
+    margin-top: 35%;
   }
 }
 
 @media (max-width: 767px) {
   .ud-hero-content .ud-hero-title {
-    font-size: 26px;
-    line-height: 38px;
+    font-size: 24px;
+    line-height: 34px;
   }
 }
 
