Code changes for CSL issue

--- a/app/view/beginner/home.twig
+++ b/app/view/beginner/home.twig
@@ -6,7 +6,7 @@
 
 {% block content %}
 <section class="ud-hero">
-    <img class="ud-hero-image" src="assets/images/beginner/cover.png" alt="Cover Image" height="750px" width="950px">
+    <img class="ud-hero-image" src="assets/images/beginner/cover.png" height="750" width="950" alt="Cover Image">
     <div class="ud-hero-content">
         <h1 class="ud-hero-title">
             IF YOU THINK INTERNET CHANGED YOUR LIFE, THINK AGAIN.<br />
