--- a/app/view/trios/home.twig
+++ b/app/view/trios/home.twig
@@ -7,7 +7,7 @@
 {% block content %}
 
 <section class="ud-hero">
-    <img class="ud-hero-image" src="assets/images/trios/cover.png" alt="Cover Image" height="750px" width="950px">
+    <img class="ud-hero-image" src="assets/images/trios/cover.png" width="950" height="750" alt="Cover Image" />
     <div class="ud-hero-content">
         <h1 class="ud-hero-title">
             IF YOU THINK INTERNET CHANGED YOUR LIFE, THINK AGAIN.<br />
