--- a/app/view/layout.twig
+++ b/app/view/layout.twig
@@ -15,13 +15,14 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" as="style"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" />
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+        media="print" onload="this.media='all';this.onload = null;">
 
     <link rel="stylesheet" href="assets/css/packages.min.css?v1.1" media="print"
         onload="this.media='all';this.onload = null;" />
-
-
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-
     {% if siteEnv == 'prod' %}
     <link rel="stylesheet" href="assets/css/{{customUI}}/custom-style.min.css?v1.1" media="print"
         onload="this.media='all';this.onload = null;" />
@@ -46,6 +47,11 @@
         <i class="fa fa-angle-up" aria-hidden="true"></i>
     </a>
     <!-- ====== Back To Top End ====== -->
+
+    <noscript>
+        <link rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" />
+    </noscript>
 
     <script src="assets/js/packages.min.js?v1.1"></script>
     {% if siteEnv == 'prod' %}
