--- a/app/view/trios/footer.twig
+++ b/app/view/trios/footer.twig
@@ -1,9 +1,9 @@
-<footer class="ud-footer ud-footer-bottom wow fadeInUp" data-wow-delay=".15s">
-    <div class="">
+<footer class="ud-footer">
+    <div class="ud-footer-bottom">
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <p class="ud-footer-bottom-left">
+                    <p>
                         Trios Technologies Pvt Ltd. &#169; {{ "now"|date("Y") }}
                     </p>
                 </div>
