--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -34,3 +34,15 @@
 .ud-login-form .ud-form-group input:focus {
   border-color: var(--primary-color);
 }
+
+@media (max-width: 767px) {
+  .ud-login {
+    padding: 94px 0;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .ud-hero {
+    padding-top: 110px;
+  }
+}
